Fix scenes home for safari. EVERYTHING broken in IE.

--- a/assets/css/scenes_page_styles.css
+++ b/assets/css/scenes_page_styles.css
@@ -3,13 +3,13 @@
 }
 
 .scenes-icon-container {
-  position: absolute;
+  /*position: absolute;*/
   display: flex;
   align-items: center;
   justify-content: center;
   width: calc(100% - 35vw);
   height: 100%;
-  transform: translate(0, -15vh);
+  /*transform: translate(0, -15vh);*/
 }
 
 .icon-start {
@@ -28,7 +28,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 0px 5vw 0px 5vw;
+  margin: 0px 5vw 5px 5vw;
   animation: fade-in 2.5s ease .25s forwards;
 }
 
